@@ -202,7 +202,6 @@ comm.zoqfot.music = comm/zoqfot/zoqfot.mod
 comm.zoqfot.resources = comm/zoqfot.ls2
 credits.background = credits/credback.ani
 credits.credits = credits/credits.txt
-credits.creditsmusic = credits/credits.ogg
 credits.font.pt13 = credits/pt13.fon
 credits.font.pt17 = credits/pt17.fon
 credits.font.pt45 = credits/pt45.fon
@@ -742,8 +741,8 @@ ship.sis_ship.graphics.sis.small = sis_ship/sis.sml
 ship.sis_ship.graphics.sishyper = sis_ship/sishyper.ani
 ship.sis_ship.icons = sis_ship/sisicons.ani
 ship.sis_ship.sounds = sis_ship/sissound.snd
-ship.slides/ending.text = slides/ending/ending.txt
-ship.slides/intro.text = slides/intro/intro.txt
+slides.ending = slides/ending/ending.txt
+slides.intro = slides/intro/intro.txt
 ship.slylandr.code = slylandr/slylandr.cod
 ship.slylandr.ditty = slylandr/slyditty.mod
 ship.slylandr.graphics.captain = slylandr/slycap.ani
